syntax = "proto3";
package trpc.shortvideo.recommend;

option go_package = "github.com/Yamon955/ShortVideo/protocol/recommend/pb";

service Recommend {
    rpc FeedsRecommend(FeedsRecommendReq) returns (FeedsRecommendRsp);
}

message FeedsRecommendReq {
    uint64 uid = 1;
    int64 start_index = 2;
}

message FeedsRecommendRsp {
    int64 next_index = 1;
    repeated uint64 vids = 2;
}